--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 5174",
     "build": "vite build",
+    "build-local-compose": "vite build --mode local-compose --emptyOutDir --outDir ../compose-deployer/auth-client",
     "preview": "vite preview"
   },
   "dependencies": {
