--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Generate .env.production file
-      run: echo "${{ secrets.ENV_PRODUCTION }}" > .env.production 
+      run: echo "${{ vars.ENV_PRODUCTION }}" > .env.production 
 
     - name: Install dependencies & Build
       run: |
